# FiniteFields

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: ff.c  ff.h
tests/: ff_test.c  main.c  minunit.h
